# Feudo-Vermelho-Rosas

./: README.md  docker-compose.yaml  passo_a_passo.md
DjangoVueDocker/: Dockerfile.backend  docker-compose.yml  pyproject.toml
DjangoVueDocker/backend/: settings.py  urls.py
DjangoVueDocker/backend/blog/: models.py  views.py
DjangoVueDocker/backend/blog/templates/blog/: base.html  frontpage.html  post_detail.html  recomend.html  sobre.html
DjangoVueDocker/backend/todo/: serializers.py
DjangoVueDocker/backend/todo/migrations/: 0001_initial.py
DjangoVueDocker/frontend/: package-lock.json
DjangoVueDocker/frontend/src/: recomenda.vue
DjangoVueDocker/frontend/src/views/: SobreView.vue
Estudos mongoDB/: Gustavo_file.md  leandro.md
Estudos-mongoDB/: Flávio_file.md
JavaScript/: flavio_comandos.js
Projeto/DjangoVueDocker/: pyproject.toml
Projeto/docker-network/: docker-compose.yml
Projeto/flaskapp/: Dockerfile  pyproject.toml
Projeto/node/: Dockerfile  app.js
Projeto/wordpress/: docker-compose.yml
Projeto/wordpress-network/: docker-compose.yml
Routervue/: package.json
Routervue/src/: App.vue
docs/EstudoGit/: Gustavo_file.md
docs/EstudosGit/: Gustavo_file.md  leandro.md
docs/EstudosJavaScript/: gustavo_file.md  leandroJS.md
docs/EstudosMongoDB/: Gustavo_file.md
front-end/: docker-compose.yml  package.json.save
front-end/views/: index.html
front-end_puro/: docker-compose.yml
front-end_puro/views/: index-qs.html  index-re.html  index.html
src/ui/: home.js  index.html
vuecomcarrossel/DjangoVueDocker/: Dockerfile.backend  (+1 more)
(+35 files in other folders)
