[tool.poetry]
name = "djangovuedocker"
version = "0.1.0"
description = ""
authors = ["Davi Alves <>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
mysqlclient = "^2.0.1"
djangorestframework = "^3.11.1"
django-cors-headers = "^3.4.0"
Pillow = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
